Refatorando o handle de erros
